# fmt-module

./: .CMakeUserPresets.json  .TODO.txt  .bumpversion.cfg  .bumpversion.md  .clang-tidy  .cmakefiles.txt  .codespellrc  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  GNUmakefile  HACKING.md  README.md
.github/workflows/: cmake.yml
cmake/: CPM.cmake  dev-mode.cmake  example.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  prelude.cmake  variables.cmake
example/: CMakeLists.txt  main.cxx
module/: fmt.cppm
module/tests/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt
tests/: CMakeLists.txt  header-only-test.cc
